<resources>
    <string name="app_name">GX Sales</string>
    <string name="tvDummy_Title">Dummy Title</string>
    <string name="tvCredit">GlobalXtreme © 2023 - V1.0</string>
    <string name="tvBtn_SignIn">Sign In</string>
    <string name="tvTitle_Email">Email</string>
    <string name="tvTitle_Password">Password</string>
    <string name="tvDummy_PopupDescription">Lorem ipsum dolor sit amet et dolore magna aliqua.</string>
    <string name="tvPopup_SuccessLogin">Lorem ipsum dolor sit amet et dolore magna aliqua.</string>
    <string name="tvPopupTitle_Success">Success</string>
    <string name="tvPopupDesc_ProcessSuccess">Your process is success</string>
    <string name="tvPopupDesc_LoginSuccess">Congratulations! You\'ve successfully logged in.</string>
    <string name="tvPopupTitle_Logout">Log Out</string>
    <string name="tvPopupDesc_Logout">Are you sure you want to log out?</string>
    <string name="tvPopupDesc_LogoutSuccess">Congratulations! You\'ve successfully logged out.</string>
    <string name="tvPopupTitle_Unauthorized">Session Expired</string>
    <string name="tvPopupDesc_Unauthorized">Please log in again to continue.</string>
    <string name="tvMenu_home">Home</string>
    <string name="tvMenu_leads">Leads</string>
    <string name="tvMenu_shop">Shop</string>
    <string name="tvMenu_account">Account</string>
    <string name="tvDummy_Name">Arbi Mauday</string>
    <string name="tvDummy_Email">arbi@example.com</string>
    <string name="tvDummy_BranchTitle">Branch</string>
    <string name="tvDummy_BranchDesc">GlobalXtreme Bali</string>
    <string name="btnTxt_Logout">Log Out</string>
    <string name="btnTxt_Cancel">Cancel</string>
    <string name="tvDummy_DivisionTitle">Division</string>
    <string name="tvDummy_DivisionDesc">Sales</string>
    <string name="tvDummy_PositionTitle">Job Position</string>
    <string name="tvDummy_PositionDesc">Senior Sales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvDummy_ToolbarTitle">Add Lead</string>
    <string name="tvToolbarTitle_Leads">Leads</string>
    <string name="tvToolbarTitle_AddLeads">Add Leads</string>
    <string name="tvToolbarTitle_Shop">Item Shop</string>
    <string name="tvDummy_DateRange">01 Jan 2024 – 31 Jan 2024</string>
    <string name="tvDummy_ProductName">A810R AC1200 Router</string>
    <string name="tvDummy_ProductPrice">Rp 56.000.000.000 / pcs</string>
    <string name="tvTitle_ProductStock">Stock :</string>
    <string name="tvDummy_ProductStock">3 Pcs</string>
    <string name="tvTitle_TypeProduct">Type :</string>
    <string name="tvDummy_ProductType">Onu |</string>
    <string name="tvTitle_TaxProduct">w/Tax :</string>
    <string name="tvDummy_ProductTax">Rp 56.600 (11%)</string>
    <string name="tvFormat_ProductPrice">Rp %s / pcs</string>
    <string name="tvFormat_ProductStock">%d Pcs</string>
    <string name="tvFormat_ProductTax">Rp %s (11%%)</string>
    <string name="tvHint_SearchShop">Search…</string>
    <string name="tvHint_SearchLead">e.g John Doe</string>
    <string name="tvDummy_SummaryCount">15</string>
    <string name="tvDummy_SummaryName">Total All Leads</string>
    <string name="btnTxt_Filter">Filter</string>
    <string name="tvDummy_LeadName">I Ketut Yuli Adi Saputra</string>
    <string name="tvDummy_LeadNumber">#LD0124101715</string>
    <string name="tvDummy_LeadAddress">Jl. Tukad Balian Gg. Nuri III No.9, Renon, Denpasar Selatan, Kota Denpasar, Bali 80227, Indonesia</string>
    <string name="tvDummy_LeadStatus">Scheduled</string>
    <string name="tvDummy_LeadProbability">Pending</string>
    <string name="tvDummy_LeadCreatedAt">02 January 2024</string>
    <string name="tvDummy_LeadBranchOffice">GlobalXtreme Bali</string>
    <string name="btnTxt_Previous">Previous</string>
    <string name="btnTxt_Submit">Submit</string>
</resources>