<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="70dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/item1"/>

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/ivProduct"
        app:layout_constraintTop_toTopOf="@id/ivProduct"
        app:layout_constraintBottom_toTopOf="@id/tvProductPrice"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:fontFamily="@font/inter_medium"
        android:textStyle="bold"
        android:textColor="@color/carbon_fiber"
        android:text="@string/tvDummy_ProductName"/>

    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvProductName"
        app:layout_constraintTop_toBottomOf="@id/tvProductName"
        app:layout_constraintBottom_toTopOf="@+id/tvProductStockTitle"
        android:textSize="12sp"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/himawari_yellow"
        android:text="@string/tvDummy_ProductPrice"/>

    <TextView
        android:id="@+id/tvProductStockTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvProductPrice"
        app:layout_constraintTop_toBottomOf="@id/tvProductPrice"
        app:layout_constraintBottom_toTopOf="@id/tvTypeProductTitle"
        android:textSize="11sp"
        android:fontFamily="@font/inter_light"
        android:textColor="@color/sonic_silver"
        android:text="@string/tvTitle_ProductStock"/>

    <TextView
        android:id="@+id/tvProductStockDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvProductStockTitle"
        app:layout_constraintTop_toTopOf="@+id/tvProductStockTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvProductStockTitle"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/inter_medium"
        android:textStyle="bold"
        android:textSize="11sp"
        android:textColor="@color/pig_iron"
        android:text="@string/tvDummy_ProductStock"/>

    <TextView
        android:id="@+id/tvTypeProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvProductStockTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvProductStockTitle"
        app:layout_constraintBottom_toBottomOf="@id/ivProduct"
        android:textSize="11sp"
        android:fontFamily="@font/inter_light"
        android:textColor="@color/sonic_silver"
        android:text="@string/tvTitle_TypeProduct"/>

    <TextView
        android:id="@+id/tvTypeProductDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvTypeProductTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTypeProductTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeProductTitle"
        android:textSize="11sp"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/pig_iron"
        android:text="@string/tvDummy_ProductType"/>

    <TextView
        android:id="@+id/tvTaxProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvTypeProductDesc"
        app:layout_constraintTop_toTopOf="@+id/tvTypeProductDesc"
        app:layout_constraintBottom_toBottomOf="@+id/tvTypeProductDesc"
        android:layout_marginStart="8dp"
        android:textSize="11sp"
        android:fontFamily="@font/inter_light"
        android:textColor="@color/sonic_silver"
        android:text="@string/tvTitle_TaxProduct"/>

    <TextView
        android:id="@+id/tvTaxProductDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvTaxProductTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTaxProductTitle"
        app:layout_constraintBottom_toBottomOf="@+id/tvTaxProductTitle"
        android:layout_marginStart="2dp"
        android:textSize="11sp"
        android:fontFamily="@font/inter_light"
        android:textColor="@color/pig_iron"
        android:text="@string/tvDummy_ProductTax"/>

    <View
        android:id="@+id/viewBottom"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaxProductDesc"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_dotted_line_pico"/>

</androidx.constraintlayout.widget.ConstraintLayout>