<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activity.Dashboard.fragment.HomeFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivUserProfile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/dummy_photo"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/ivUserProfile"
        app:layout_constraintTop_toTopOf="@+id/ivUserProfile"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/black"
        android:text="@string/tvDummy_Name"/>

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        app:layout_constraintBottom_toBottomOf="@+id/ivUserProfile"
        android:textSize="14sp"
        android:fontFamily="@font/inter_light"
        android:textColor="@color/brilliant_liquorice"
        android:text="@string/tvDummy_Email"/>

    <View
        android:id="@+id/viewHome"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserEmail"
        android:layout_marginTop="35dp"
        android:background="@color/placebo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDateRange"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHome"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="24dp"
        android:paddingHorizontal="18.4dp"
        android:background="@drawable/bg_rectangle_fragrant_white">

        <ImageView
            android:id="@+id/ivCalendar"
            android:layout_width="22dp"
            android:layout_height="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_calendar"/>

        <TextView
            android:id="@+id/tvDateRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/ivCalendar"
            app:layout_constraintTop_toTopOf="@id/ivCalendar"
            app:layout_constraintBottom_toBottomOf="@id/ivCalendar"
            android:layout_marginStart="13.62dp"
            android:textSize="17sp"
            android:textColor="@color/spinel_stone_black"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/tvDummy_DateRange"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSummary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@+id/clDateRange"
        app:layout_constraintEnd_toEndOf="@+id/clDateRange"
        app:layout_constraintTop_toBottomOf="@+id/clDateRange"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>